   intensity of a light based on its distance. The default attenuation changed
   from (0,1/radius,0) to (1,0,0) which means no effect by distance. Good
   values for distance effects simply add small values to the second and third
   element.

 - Fixed a typo to do with 2nd light vectors in opengl parallax and normal map
   renderers.

GUI:

 - Added IGUISkin::draw2dRectangle, so skins can override the default highlight.

 - EGET_ELEMENT_FOCUS_LOST and EGET_ELEMENT_FOCUSED events can now be absorbed 
   by returning true in OnEvent. Absorbing these events will cancel the focus 
   change. 

 - IGUIEnvironment::setFocus and removeFocus now return bools.

 - New SEvent.GUIEvent.Element. Points to a second element that is being 
   used in the event. During a EGET_ELEMENT_FOCUS_LOST event it points
   to the element which would like the focus.

 - Fixed the default font icons so they have a black border and are not 
   invisible in default listboxes. Old font tool textures now keep their color
   so colorful fonts are possible by editing the font's texture. The colors of 
   completely transparent areas are no longer kept when generating the texture
   from an image. Added builtInFont.bmp for ease of editing.

 - IGUIElement changes:

     Most elements can now be accessed using the keyboard. Use space and return
     to select or deselect, escape to cancel selection (ie while pressing a 
     button with space or return), and the cursor keys where appropriate.

     Added navigation through the GUI using tab and the shift and control keys.
     Use these new methods to control tab navigation:
       setTabStop - set this to true if the focus will vist the element.
       isTabStop - returns true if the focus will visit the element.
       setTabOrder - Sets the order of focus within this tab group,
         Only one element in each group should have the same TabOrder number.
         Set to -1 to add to the end of the group.